assets/style.css
/* TO FIX */
/* CSS validator */
/* CSS needs to be simplified/redesigned? */

* {
    flex-wrap: wrap;
    max-width: 100%;
} 

body {
    /* old gradient */
    /* background: rgb(197,255,175);
    background: linear-gradient(90deg, rgba(197,255,175,1) 0%, rgb(74, 186, 76) 100%); */
    /* new gradient */
    background: rgb(0,3,50);
    background: linear-gradient(115deg, rgba(0,3,50,1) 0%, rgba(0,7,100,1)95%); 
    /* fixes background height */
    height: 100%;
    margin: 0;
    background-repeat: no-repeat;
    background-attachment: fixed;
    /* new text color */
    color: rgb(205, 215, 255);
}

a {
    /* old */
    /* color: darkblue; */
    color: rgb(0, 4, 56);
}

audio {
    max-width: 30%;
    padding: 5px;
}

audio::-webkit-media-controls-panel {
    /* old */
    /* background-color: mediumseagreen; */
    background-color: (1, 30, 156);
}

.headline {
    text-align: center; margin-top: 7em;
    font-size: 2em;
}

.tricolon1 {
    animation: fadeIn ease 3s;
}

.tricolon2 {
    animation: fadeIn ease 8s;
}

.tricolon3 {
    animation: fadeIn ease 10s;
}

.lightAnchorTag {
    color:  rgb(180, 75, 0);
    text-decoration: underline;
}

.name {
    /* old */
    /* background-color: mediumseagreen; */
    background-color: rgb(0, 4, 56);
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 10px;
    padding-bottom: 10px;
    border-radius: 3px;
}

.name:hover {
    /* old */
    /* background-color: lightseagreen; */
    background-color: rgb(1, 30, 156);
}

.name:active {
    /* old */
    /* background-color: rgb(36, 207, 179); */
    background-color: rgb(195, 209, 255);
}

.item {
    padding-left: 7px;
    padding-right: 7px;
    border-radius: 5px;
}

.item:hover {
    text-shadow: 2px 2px 7px;
    box-shadow: 2px 2px 3px, -2px -2px 3px;
}

.heading-text  {
    /* old */
    /* color: mediumseagreen; */
    color: rgb(205, 215, 255);
    font-size: 40px;
    font-family: 'Raleway', sans-serif;
    font-weight: 600;
    padding-left: 50px;
}

.body-text, .portfolio-text {
    font-family: 'Arya', sans-serif;
    margin-left: 20px;
    margin-right: 20px;
}

.body-text {
    size: 20px;
    animation: fadeIn ease 1s;
}

.portfolio-text {
    size: 15px;
}

.margin {
    margin-bottom: 1.2em;
}

.image  {
    float: left;
    margin-right: 20px;
    margin-left: 20px;
}

.navItems    {
    justify-content: right;
}

.secret:hover {
    color: red;
}

.fitSecretImg {
    max-width: 35%;
    max-height: 35%;
}

.marginForm {
    margin-left: 5%;
    margin-right: 25%;
    margin-top: 5%;
}

.portfolio-heading {
    font-weight: bold;
}

.portfolio {
    border: 1px solid black ;
    position: relative;
    overflow: auto;
    text-align: center;
    background-color: rgba(146, 144, 145, 0.904);
    height: 30em;
    margin: 10px;
    padding-top: 10px;
    width: 30%;
    float: left;
    border-radius: 5px;
    /* fade in */
    animation: fadeIn ease 1s;
}

.portfolio:hover, .contact:hover {
    transition: all 0.2s;
    box-shadow:
        0 13.7px 6.8px rgba(0, 0, 0, 0.052),
        0 19.7px 13px rgba(0, 0, 0, 0.059),
        0 25.5px 18.9px rgba(0, 0, 0, 0.061),
        0 32.4px 25.6px rgba(0, 0, 0, 0.063),
        0 41.9px 36.6px rgba(0, 0, 0, 0.072),
        0 61px 71px rgba(0, 0, 0, 0.13);
    background: linear-gradient(325deg, rgba(114, 112, 113, 0.904) 0%, rgba(231, 228, 230, 0.904) 100%);
    top: -3px;
}

.contact  {
    background-color: rgba(146, 144, 145, 0.904);
    border: 1px solid black;
    width: 30%;
    margin: 5px;
    margin-left: 3em;
    padding: 10px;
    border-radius: 5px;
    /* fade in */
    animation: fadeIn ease 1.0s;
}

.contact-icon {
    height: 1.5em;
    margin: 1em;
}

.contact-p-tags {
    margin-left: 2em;
    /* fade in */
    animation: fadeIn ease 1.0s;
}

.footer {
    font-family: sans-serif;
    bottom: 0;
    position: fixed;
    height: 3em;
    width: 100%;
    /* old */
    /* background-color: mediumseagreen; */
    background-color: rgb(0, 3, 51);
    border: 2px solid black;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 8px;
}

.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
  }

/* HOPEFULLY TEMPORARY */

.note {
    font-weight: bold;
    margin: 1em;
}

/* END HOPEFULLY TEMPORARY */

@keyframes fadeIn {  
    0% {
        opacity: 0%;
        margin-top: 1.0%;
    }
    100% {
        opacity: 100%;
    }
}

@media screen and (max-width: 600px) {

    audio {
        margin: 1em;
    }

    .fitSecretImg {
        max-width: 90%;
        max-height: 90%;
    }

    .portfolio {
        width: 90%;
    }

    .image {
        height: 175px;
        width: 175px;
    }
    
    .navItems {
        font-size: 12px;
    }

    .name {
        font-size: 12px;
    }

    .contact {
        font-size: 12px;
    }

    .contact-icon {
        height: 32px;
        width: 32px;
    }
}

@media screen and (min-width: 600px) {

    .portfolio {
        width: 90%;
    }

    .image {
        height: 175px;
        width: 175px;
    }
}

@media screen and (min-width: 768px) {
    .body-text {
        font-size: 20px
    }

    .portfolio {
        width: 45%;
    }

    .image {
        height: 200px;
        width: 200px;
    }
}

@media screen and (min-width: 992px) {
    .body-text {
        font-size: 22px
    }

    .portfolio {
        width: 30%;
    }

    .image {
        height: 228px;
        width: 228px;
    }
}

@media screen and (min-width: 1200px) {
    .body-text {
        font-size: 24px
    }
    
    .portfolio {
        width: 30%;
    }

    .image {
        height: 228px;
        width: 228px;
    }
}

